get download task list
